Fix issues with tag guessing dropdown: z-index in Chrome, momentum scroll in iOS.

--- a/styles/editable-ingredient.styl
+++ b/styles/editable-ingredient.styl
@@ -13,6 +13,9 @@
   height 100%
 // End fix.
 
+.z-index-wrapper
+  position relative
+
 .editable-ingredient
   outline none
 
@@ -148,6 +151,7 @@
   ul.typeahead-selector
     max-height 108px
     overflow-y scroll
+    -webkit-overflow-scrolling touch
     background-color grey2
     shadow('bottom', 1px)
 
